--- a/app/src/common/jobeditor/joblist.html
+++ b/app/src/common/jobeditor/joblist.html
@@ -4,6 +4,7 @@
 <link rel="import" href="/bower_components/paper-fab-speed-dial/paper-fab-speed-dial.html">
 <link rel="import" href="/bower_components/paper-fab-speed-dial/paper-fab-speed-dial-action.html">
 <link rel="import" href="/bower_components/paper-fab-speed-dial/paper-fab-speed-dial-overlay.html">
+
 <!--
 `<joblist>` is Description
 @element joblist
@@ -169,7 +170,7 @@
             }
         </style>
         <!-- Fetch an array of users to be shown in the grid -->
-        <iron-ajax auto loading="{{loading}}" url="[[jobapi]]" handle-as="json" last-response="{{jobs}}" on-error="_ajexerror" id="updateJobsList"
+        <iron-ajax auto loading="{{loading}}" headers="[[headers]]" url="[[jobapi]]" handle-as="json" last-response="{{jobs}}" on-error="_ajexerror" id="updateJobsList"
             on-response="_loadJobsComplete"></iron-ajax>
 
         <template is="dom-if" if="[[loading]]">
@@ -266,6 +267,7 @@
             static get is() {
                 return 'joblist-element';
             }
+           
             static get properties() {
                 return {
                     jobLists: {
@@ -284,9 +286,10 @@
                     job_error: {
                         type: Boolean,
                         notify: true
-                    }
+                    },
                 };
             }
+
             static get observers() {
                 return [
                     '_jobListsChanged(jobLists)'
@@ -309,8 +312,8 @@
                 return new Promise((res, rej) => {
                     if (this.jobs && this.jobs.length) {
                         console.log("fetchJob1 : ", this.jobs.length);
+                        $.ajaxSetup({ headers : this.headers });
                         this.jobs.forEach((job, index)=> {
-
                             $.getJSON(`${this.jobapi}/${encodeURIComponent(job)}`, (data) => {
 
                                 if ( (data.active === 'false' || !data.active)){
@@ -337,6 +340,7 @@
                 this.errorMessage = "";
                 this.job_error = false;
                 this.loading = true;
+                console.log("joblist complete")
 
                 if (this.jobs) {
                     this.jobLists = this.jobs.map((item)=>{
@@ -345,7 +349,7 @@
                             active :true
                         }
                     })
-                    console.log("_loadJobsComplete have jobs");
+                    //console.log("_loadJobsComplete have jobs");
                     this.fetchJob()
                         .then((res) => {
                             this.loading = false;
@@ -354,7 +358,7 @@
                         });
 
                 } else {
-                    console.log("_loadJobsComplete no jobs");
+                    //console.log("_loadJobsComplete no jobs");
                     this.loading = true;
                 }
             }
@@ -399,6 +403,7 @@
                 this.dispatchEvent(new CustomEvent('toggle-open-job'));
             }
             _updateJoblist() {
+                
                 this.$.updateJobsList.generateRequest();
             }
             _jobSelectedChanged(ev, item) {
@@ -432,6 +437,7 @@
                     refreshbt.classList.remove('active');
                 }, 400);
                 Polymer.dom(this.root).querySelectorAll('iron-ajax').forEach((el) => {
+                    //el.headers = this.getHeaders()
                     el.generateRequest();
                 })
             }
